<resources>
    <string name="app_name">MediCare</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="account">Dont have an account yet?</string>
    <string name="agree">By signing up, you agree to our</string>
    <string name="TnC">Terms &amp; Conditions</string>
    <string name="already">Already have an account?</string>
    <string name="mob">10 Digit Mobile Number</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email Address</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="oops">OOPS !</string>
    <string name="retry">Retry</string>
    <string name="NoNetwork">No Network Available. </string>
    <string name="resetPwd">Reset your password by.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="viaOtp">Via OTP</string>
    <string name="sendOtp">Send OTP</string>
    <string name="sendEmail">Send Email</string>
    <string name="viaEmail">Via E-mail</string>
    <string name="RegMob">Enter registered 10 Digit mobile number.</string>
    <string name="RegEmail">Enter registered valid Email id.</string>
    <string name="creatPassword">Reset your Password!</string>
    <string name="newPassword">Enter new password</string>
    <string name="confirmPassword">Confirm new password</string>
    <string name="resetPassword">Reset Password</string>
    <string name="textForLocation">We will need your location data to show your services available in your area.</string>
    <string name="topCity">Top Cities</string>
    <string name="autoDetect">Auto-detect Current Location</string>
    <string name="continues">Continue</string>
    <string name="choseOpt">Choose an option to upload</string>
    <string name="prescription">Prescriptions History</string>
    <string name="uploadPrescription">Upload Prescription</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="searchMedicine">    Search your medicine here !</string>

    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">No friends selected </string>
    <string name="no_place_selected">No place selected</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="app_id">355198514515820</string>
    <string name="exception">Exception: %1$s</string>
    <!--for google plus-->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

    <string name="title_text">Google Sign-In\nQuickstart</string>
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="later">Later</string>
    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">52739468341-4lnsms8nvqdo3mfd9v69sgikq3kfjl8o.apps.googleusercontent.com</string>
    <!-- 23760741748-ch16b2nhk77q76o34b1a76f7s0s9fccp.apps.googleusercontent.com</string>-->
    <string name="sha_key">FA:98:F4:EA:E5:87:99:EC:8A:15:44:06:5D:07:C4:4C:94:FF:4F:FF</string>
    <string name="choose_type">Choose user type</string>
    <string name="retailer">Retailer</string>
    <string name="customer">Customer</string>
    <string name="access_token">pk.eyJ1Ijoia2Fud2FsMDAxIiwiYSI6ImNqM2JqMmVjNTAwNHUzMW83eHJ4bDgzNXQifQ.42OZllCLcdCliEjkYh0WtQ</string>
    <!--4juqxR+bfCEhOEDslBTwAePpz74= facebook hash key-->

    <!--temp -->

    <string name="title_activity_maps">Map</string>

    <!--Fetch Address-->
    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <!-- <string name="google_web_client_id">872528045825-ldgliqnvos8tghu3b3n8rfr175r0egmv.apps.googleusercontent.com</string>-->
    <!-- <string name="google_web_client_id">419293150539-bsccqm47jciaock4bt5g1v1gv5p534j4.apps.googleusercontent.com</string>-->


    <!--using for firebase database -->

    <!-- <string name="facebook_app_id">336156680130673</string>
    <string name="fb_login_protocol_scheme">fb336156680130673</string>-->

    <string name="facebook_app_id">708639629338857</string>
    <string name="fb_login_protocol_scheme">fb708639629338857</string>

    <!-- facebook login -->
    <!--string name="facebook_app_id">336156680130673</string>-->
    <array name="user_type">
        <item>Customer</item>
        <item>Retailer</item>
    </array>
    <string name="title_activity_maps1">Map</string>

    <string name="error_google_sign_in">Can\'t sign in using Google</string>
    <string name="placeholder">Placeholder</string>
    <string name="empty_view_home">Oh oh! Looks like you\'re all alone</string>
    <string name="button_invite">Invite</string>
    <string name="hint_message">Type your message..</string>
    <string name="error_loading_user">Couldn\'t load user</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="empty_view_thread">Send the first message!</string>
    <string name="error_sending_messages">Couldn\'t send message, please retry</string>
    <string name="message_message_copied">Copied to clipboard</string>
    <string name="clipboard_title_copied_message">Copied message</string>

    <!--added for notification-->
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="notificationtitle">Android Notification Tutorial</string>
    <string name="notificationtext">Notification Text</string>
    <string name="notificationticker">Notification Ticker</string>
    <string name="customnotificationtitle">MediCare</string>
    <string name="customnotificationtext">Hey! I am searching this medicine</string>
    <!--Custom Notification Text</string>-->
    <string name="customnotificationticker">Custom Notification Ticker</string>
    <string name="notification">Notification</string>
    <string name="customnotification">Custom Notification</string>
    <string name="home">Home</string>
    <string name="search_medicine">Search Medicine</string>
    <string name="add_location">Add Location</string>
    <string name="logout">Logout</string>
    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>Add Location</item>
        <item>Search Medicine</item>
        <item>Logout</item>
    </string-array>
    >
    <string name="add_medical_address">Add your medical store address</string>

</resources>

