<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search_medicine"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_medicine"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_location"
        android:enabled="true"
        android:icon="@drawable/ic_add_location_black_24dp"
        android:title="@string/add_location"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:enabled="true"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />
</menu>