<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="mypackage.loginregistration.LoginPage">


        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:background="@color/cyan"
            android:text="@string/signup"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/chbSignIn"
            style="@android:style/Widget.Holo.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView7"
            android:layout_alignRight="@+id/textView7"
            android:layout_below="@+id/edtNewPassword"
            android:buttonTint="@color/cyan"
            android:checked="false"
            android:text="@string/agree"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColorLink="?attr/colorPrimaryDark" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnSignUp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="33dp"
            android:layout_marginLeft="47dp"
            android:layout_marginStart="47dp"
            android:text="@string/already"
            android:textColor="@color/deepBlue" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edtName"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textCursorDrawable="@drawable/color_cursor" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLength="15"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textCursorDrawable="@drawable/color_cursor" />

        <EditText
            android:id="@+id/edtMobNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edtEmail"
            android:hint="@string/mob"
            android:inputType="number"
            android:maxLength="10"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textCursorDrawable="@drawable/color_cursor" />

        <EditText
            android:id="@+id/edtNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edtMobNum"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textCursorDrawable="@drawable/color_cursor" />

        <TextView
            android:id="@+id/txtViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView7"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp"
            android:layout_toEndOf="@+id/textView7"
            android:layout_toRightOf="@+id/textView7"
            android:clickable="true"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/cyan" />

        <TextView
            android:id="@+id/txtViewTerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/chbSignIn"
            android:layout_alignBottom="@+id/chbSignIn"
            android:layout_toEndOf="@+id/chbSignIn"
            android:layout_toRightOf="@+id/chbSignIn"
            android:clickable="true"
            android:contextClickable="true"
            android:cursorVisible="true"
            android:text="@string/TnC"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    </RelativeLayout>
</ScrollView>