<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/activity_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
<!--sign up text heading-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"

                />

            <TextView
                android:id="@+id/tv_SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="15dp"
                android:text="@string/signup"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"/>
            <!-- Later Button-->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnLater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@color/dark_cyan"
                android:text="@string/later"
                android:textColor="@color/white"/>
        </RelativeLayout>
        <!--snackbar-->
        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/snackbarCoordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.design.widget.CoordinatorLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">
        <!--name label-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/ll_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"

                    android:inputType="textPersonName"
                    android:maxLength="15"
                    android:textColor="@color/oil"/>
            </android.support.design.widget.TextInputLayout>

            <!--  Mobile Num Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/ll_input_mob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edtMobNum"
                android:text="9876543210"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mob"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/oil"

                />
        </android.support.design.widget.TextInputLayout>
        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
                android:id="@+id/ll_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"

                    android:inputType="textEmailAddress"
                    android:textColor="@color/oil" />
            </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_input_password"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/edtNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:text="Pass@123"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/tv_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:textColor="@color/cyan"
            android:layout_marginTop="8dp"/>


        <RadioGroup
            android:id="@+id/radioGroupUserType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true">


            <RadioButton
                android:text="@string/customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rdb_customer"
                android:buttonTint="@color/cyan500"
                android:checked="true"

                />
            <RadioButton
                android:text="@string/retailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rdb_retailer"

                android:buttonTint="@color/cyan500"
                android:layout_below="@+id/radio"
                />
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--checkbox for tnc-->

                <CheckBox
                    android:id="@+id/chbSignIn"
                    style="@android:style/Widget.Holo.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edtNewPassword"
                    android:buttonTint="@color/cyan"
                    android:text="@string/agree"
                    android:layout_alignParentRight="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColorLink="?attr/colorPrimaryDark" />


            <!--label for TnC-->
            <TextView
       android:id="@+id/txtViewTerm"
       android:layout_width="200dp"
       android:layout_height="wrap_content"
       android:clickable="true"
       android:text="@string/TnC"
                android:layout_toRightOf="@id/chbSignIn"
                android:layout_alignBaseline="@id/chbSignIn"
       android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginTop="@dimen/activity_vertical_margin"
          android:layout_marginBottom="@dimen/activity_vertical_margin">
        <!--link for already signup-->
        <TextView
            android:id="@+id/tv_haveAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/already"
            android:textColor="@color/deepBlue" />
        <!--login label-->
          <TextView
              android:id="@+id/tv_login"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/activity_horizontal_margin"
              android:layout_toRightOf="@id/tv_haveAcc"
              android:clickable="true"
              android:text="@string/login"
              android:textAppearance="@style/TextAppearance.AppCompat.Large"
              android:textColor="@color/cyan" />
      </LinearLayout>
            </LinearLayout>


    <!-- Signup Button-->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/cyan"
            android:text="@string/signup"
            android:textColor="@color/white" />
</LinearLayout>

</ScrollView>