<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_element"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/cyan"
    android:orientation="vertical"
    android:padding="10sp"
    >



    <TextView
        android:id="@+id/txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetPwd"
        android:layout_marginTop="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_close_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/confirm"
        android:background="@color/grey"
        android:textColor="@color/white"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/txtView"
        android:layout_centerHorizontal="true">
        <RadioButton
            android:text="@string/viaEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdbEmail"
            android:buttonTint="@color/grey"
            android:layout_below="@+id/radio"
            />

        <RadioButton
            android:text="@string/viaOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdbOtp"
            android:buttonTint="@color/grey"

            />
    </RadioGroup>


</RelativeLayout>


