<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.medicare.app.loginregistration.com.medicare.activity.LoginPage">


    <Button
        android:text="@string/retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_retry"
        android:textColor="@color/white"
        android:background="@color/cyan"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNoNetwork"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/grey"
        android:text="@string/NoNetwork"
        android:textSize="20dp"

        android:layout_below="@+id/tvOops"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvOops"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/grey"
        android:text="@string/oops"
        android:textSize="50dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/exclamanation"
        android:id="@+id/imgViewEx"
        android:layout_above="@+id/tvOops"
        android:layout_alignRight="@+id/tvOops"
        android:layout_alignEnd="@+id/tvOops"
        android:layout_marginBottom="12dp" />


</RelativeLayout>
