<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:id="@+id/loginLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1">

        <TextView

            android:id="@+id/tv_create_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:text="@string/creatPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <!--  New Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/ll_input_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            >

            <EditText
                android:id="@+id/edtNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:maxLength="10"
                android:textColor="@color/black"/>
        </android.support.design.widget.TextInputLayout>

        <!--  Confirm Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/ll_input_cnf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            >

            <EditText
                android:id="@+id/edtCnfPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:maxLength="10"
                android:textColor="@color/black"/>
        </android.support.design.widget.TextInputLayout>


        <!-- Reset Button-->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_reset"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/cyan"
            android:padding="12dp"
            android:text="@string/resetPassword"
            android:textColor="@color/white"/>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

        </FrameLayout>
    </LinearLayout>
</ScrollView>